...
                    .frame(minHeight: 300)
                    .padding(16)
                    .background(DesignTokens.WhiteColors.surface)
                    .cornerRadius(10)
                    .scrollContentBackground(.hidden)
                    .overlay(placeholderOverlay)
                    .accessibilityIdentifier("large_text_editor_sheet_editor")
                    .padding()
            }
            .navigationTitle(Text(title))
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    CollapseIconButton(accessibilityIdentifier: "large_text_editor_sheet_close") {
                        onClose()
                    }
                }
            }
            .presentationDetents([.large])
            .keyboardCloseToolbar(labelStyle: .iconWithText(Copy.Button.close)) {
...
